--- a/StepFunctionCloudFormation.yml
+++ b/StepFunctionCloudFormation.yml
@@ -92,7 +92,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action: 'states:StartExecution'
-                Resource: '*'
+                Resource: !GetAtt [MyStateMachine, Arn]
  CloudWatchEventRule:
     Type: "AWS::Events::Rule"
     Properties:
