--- a/StepFunctionCloudFormation.yml
+++ b/StepFunctionCloudFormation.yml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: 2010-09-09
 Description: An example template for a Step Functions state machine.
 Parameters:
   DatabaseInstanceType:
@@ -15,7 +15,7 @@ Parameters:
     Description: The master password for the DB instance.
     Type: String
 Resources:
- SQLDatabase:
+  SQLDatabase:
     Type: 'AWS::RDS::DBInstance'
     Properties:
       AutoMinorVersionUpgrade: false
@@ -25,7 +25,7 @@ Resources:
       MasterUserPassword: !Ref MasterUserPassword
       DBSnapshotIdentifier: 'arn:aws:rds:us-east-1:638426169984:snapshot:sqlcustomer-snapshot-july2'
       DBSubnetGroupName: default
- StatesExecutionRole:
+  StatesExecutionRole:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
@@ -38,41 +38,34 @@ Resources:
             Action:
               - 'sts:AssumeRole'
       Path: /
-      Policies:
-        - PolicyName: StatesExecutionPolicy 
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action: 'lambda:InvokeFunction'
-                Resource: '*'
- SqlAgentActivity:
-    Type: "AWS::StepFunctions::Activity"
-    Properties: 
+  SqlAgentActivity:
+    Type: 'AWS::StepFunctions::Activity'
+    Properties:
       Name: SqlAgentActivity
- MyStateMachine:
-    Type: AWS::StepFunctions::StateMachine
+  MyStateMachine:
+    Type: 'AWS::StepFunctions::StateMachine'
     Properties:
       StateMachineName: SqlAgent-StateMachine
-      DefinitionString: 
-        !Sub
-          - |-
-            {
-              "Comment": "A sql agent step function",
-              "StartAt": "SqlAgent",
-              "States": {
-                "SqlAgent": {
-                  "Type": "Task",
-                  "Resource": "${SqlAgentActivityArn}",
-                  "End": true
-                }
+      DefinitionString: !Sub 
+        - |-
+          {
+            "Comment": "A sql agent step function",
+            "StartAt": "SqlAgent",
+            "States": {
+              "SqlAgent": {
+                "Type": "Task",
+                "Resource": "${SqlAgentActivityArn}",
+                "End": true
               }
             }
-          - {SqlAgentActivityArn: !Ref SqlAgentActivity}
-      RoleArn: !GetAtt [ StatesExecutionRole, Arn]
+          }
+        - SqlAgentActivityArn: !Ref SqlAgentActivity
+      RoleArn: !GetAtt 
+        - StatesExecutionRole
+        - Arn
     DependsOn:
       - SqlAgentActivity
- ExecuteStateMachineRole:
+  ExecuteStateMachineRole:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
@@ -86,22 +79,21 @@ Resources:
               - 'sts:AssumeRole'
       Path: /
       Policies:
-        - PolicyName: ExecuteStateMachine 
+        - PolicyName: ExecuteStateMachine
           PolicyDocument:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action: 'states:StartExecution'
-                Resource: !GetAtt [MyStateMachine, Arn]
- CloudWatchEventRule:
-    Type: "AWS::Events::Rule"
+                Resource: !Ref MyStateMachine
+  CloudWatchEventRule:
+    Type: 'AWS::Events::Rule'
     Properties:
-      Description: "Rule to invoke state machine every 30 minutes"
-      ScheduleExpression: "rate(30 minutes)"
-      State: "ENABLED"
+      Description: Rule to invoke state machine every 30 minutes
+      ScheduleExpression: rate(30 minutes)
+      State: ENABLED
       Targets:
-        -
-          Arn: !Ref MyStateMachine
+        - Arn: !Ref MyStateMachine
           Id: MyStateMachineV1
           Input: '{ "Command": "start" }'
           RoleArn: !GetAtt ExecuteStateMachineRole.Arn
